--- a/style/bookmark.css
+++ b/style/bookmark.css
@@ -20,8 +20,23 @@ html, body {
 #bookmark-form label {
   text-transform: uppercase;
   font-size: 1.5rem;
+  padding-left: 1.5rem;
 }
 
 #bookmark-form input {
   margin-bottom: 1.5rem;
+}
+
+menu[type="toolbar"], #add-button, #add-bookmark-header, #edit-bookmark-header {
+  display: none;
+}
+
+body[data-mode="add"] #add-bookmark-header,
+body[data-mode="add"] #add-button {
+  display: block;
+}
+
+body[data-mode="put"] #edit-bookmark-header,
+body[data-mode="put"] menu[type="toolbar"] {
+  display: block;
 }
