Bug 1134795 - Show icon when installing web app from web page

--- a/style/save.css
+++ b/style/save.css
@@ -44,11 +44,7 @@ body[data-mode="put"] #edit-bookmark-header {
 
 #app-installation {
   padding: 1.5rem;
-  padding-top: 3rem;
-}
-
-#app-installation.hidden {
-  display: none;
+  padding-top: 2rem;
 }
 
 #app-installation h2 {
@@ -69,10 +65,17 @@ body[data-mode="put"] #edit-bookmark-header {
   text-transform: uppercase;
 }
 
+#app-icon, #app-icon-placeholder {
+  display: block;
+  width: 6rem;
+  height: 6rem;
+  margin: 0.5rem auto 0 auto;
+}
+
 #app-installation p {
   font-size: 1.4rem;
   color: rgb(80, 88, 89);
-  margin: 1.5rem;
+  margin: 1rem;
 }
 
 #app-installation #app-name {
@@ -91,4 +94,10 @@ body[data-mode="put"] #edit-bookmark-header {
   width: auto;
   margin: 0 auto;
   padding: 0 5rem;
+}
+
+#app-icon.hidden,
+#app-icon-placeholder.hidden,
+#app-installation.hidden {
+  display: none;
 }
